fixed vertical align issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
 .appComponent {
   display: flex;
+  justify-content: center;
+  padding: 15%;
 }
